# binfetch

./: CMakeLists.txt
src/: downloader.cpp  downloader.hpp  main.cpp  pch.h  utils.hpp  vtscanner.cpp  vtscanner.hpp
